added stock, fixed other bugs

--- a/www/templates/cart.list.html
+++ b/www/templates/cart.list.html
@@ -22,7 +22,8 @@
 					<div class="row">
 				  		<small class="mr10">Quantity:</small>
 						<button type="submit" ng-click="minus(Item)"><i class="ion-minus"></i></button>
-						<p class="ml10 mr10" style="color:#F1C40F;">{{Item.qty}}</p>
+						<p class="pl5 pr5" style="color:#F1C40F;">{{Item.qty}}</p>
+						<!-- <input type="text" class="ml10 mr10" ng-model="{{Item.qty}}" style="color:#F1C40F;width:50px;" /> -->
 				  		<button type="submit" ng-click="plus(Item)"><i class="ion-plus"></i></button>
 					</div>
 
