--- a/www/templates/order.summary.html
+++ b/www/templates/order.summary.html
@@ -59,7 +59,7 @@
 		<!-- Row for confirm button -->
 		<div class="row">
 			<div class="col">
-				<button type="submit" class="button button-block btnCheckOut">Confirm</button>
+				<button type="submit" class="button button-block btnCheckOut">Confirm Purchase</button>
 			</div>
 		</div>	
 	</form>
