--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -91,7 +91,7 @@
 				<div class="row">
 					<div class="col">
 						<button type="submit" class="button button-block btnCheckOut font-medium"
-						ng-disabled="shipmentform.$invalid">Pay Now</button>
+						ng-disabled="shipmentform.$invalid">Next</button>
 					</div>
 				</div>
 			</form>
@@ -131,7 +131,7 @@
 			<div class="row">
 				<div class="col">
 					<button type="submit" class="button button-block btnCheckOut font-medium"
-					ng-disabled="pickupForm.$invalid">Pay Now</button>
+					ng-disabled="pickupForm.$invalid">Next</button>
 				</div>
 			</div>
 		</form>
