--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -62,7 +62,7 @@
         </ion-item>
         <!-- End Login -->
 
-        <ion-item menu-close href="#/app/order/history">
+        <ion-item menu-close href="#/app/order/history" ng-show="loginInfo != null">
           <i class="ion-social-buffer"></i>
           Order History
         </ion-item>
