--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -66,12 +66,12 @@
           <ion-content ng-controller="user">
           
 
-          <form name="signUpForm" ng-submit="signup(userdata)">
+          <form name="signUpForm" ng-submit="signup(register)">
           
             <div class="list">
               <label class="item item-input item-floating-label" ng-class="{ 'has-errors' : signUpForm.username.$invalid, 'no-errors' : signUpForm.username.$valid}">
                 <span class="input-label font-small">Username</span>
-                <input type="text" name="username" ng-model="userdata.username" placeholder="Username" required>
+                <input type="text" name="username" ng-model="register.username" placeholder="Username" required>
               </label>
 
               <!-- Error message for username -->
@@ -82,7 +82,7 @@
 
               <label class="item item-input item-floating-label" ng-class="{ 'has-errors' : signUpForm.email.$invalid, 'no-errors' : signUpForm.email.$valid}">
                 <span class="input-label font-small">Email</span>
-                <input type="text" name="email" ng-model="userdata.email" placeholder="Email" required>
+                <input type="email" name="email" ng-model="register.email" placeholder="Email" required>
               </label>
 
                <!-- Error message for email -->
@@ -93,7 +93,7 @@
 
               <label class="item item-input item-floating-label" ng-class="{ 'has-errors' : signUpForm.password.$invalid, 'no-errors' : signUpForm.password.$valid}">
                 <span class="input-label font-small">Password</span>
-                <input type="password" name="password" ng-model="userdata.password" placeholder="Password" ng-minlength='5' ng-maxlength='20' required>
+                <input type="password" name="password" ng-model="register.password" placeholder="Password" ng-minlength='5' ng-maxlength='20' required>
               </label>
 
               <!-- Error message for password -->
@@ -104,7 +104,7 @@
 
               <label class="item item-input item-floating-label" ng-class="{ 'has-errors' : signUpForm.confpassword.$invalid, 'no-errors' : signUpForm.confpassword.$valid}">
                 <span class="input-label font-small">Confirm Password</span>
-                <input type="password" name="confpassword" ng-model="userdata.confpassword" placeholder="Confirm Password" compare-to="userdata.password" required>
+                <input type="password" name="confpassword" ng-model="register.confpassword" placeholder="Confirm Password" compare-to="register.password" required>
               </label>
 
               <!-- Error message for  confirm password -->
