--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -53,7 +53,7 @@
         <!-- Login -->
         <ion-item menu-close ng-click="login()" ng-if="userinfo.id == null">
           <i class="ion-log-in"></i>
-          Login
+          Login / Sign Up
         </ion-item>
 
         <ion-item menu-close href="#/app/profile" ng-if="userinfo.id != null">
