--- a/www/templates/order.history.details.html
+++ b/www/templates/order.history.details.html
@@ -21,6 +21,15 @@
 	        </div>	        
 		</ul>
 
+		<div class="row">
+			<div class="col-50">
+				<p class="font-medium text-right">Shipment Fee:</p>
+			</div>
+			<div class="col-50">
+				<p class="font-big text-right" style="color:#3498DB;">{{OrderInfo.shipping_price}}</p>
+			</div>
+		</div>
+
 		<!-- Total price -->
 		<div class="row">
 			<div class="col-50">
