--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -71,7 +71,7 @@
              Description:
           </div>
           <div class="item item-text-wrap">
-            <p>{{productDetails.note}}</p>
+            <div ng-bind-html="productDetails.note"></div>
           </div>
         </div>
   
