--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -17,9 +17,17 @@
 			    	<div class="col col-50">Payment Status</div>
 			    	<div class="col col-50"><span class="text-color">{{OrderInfo.status}}</span></div>
 			    </div>
-			     <div class="row">
+			    <div class="row">
 			    	<div class="col col-50">Recipient</div>
 			    	<div class="col col-50"><span class="text-color">{{OrderInfo.BillingInfo.given_name}} {{OrderInfo.BillingInfo.family_name}}</span></div>
+			    </div>
+			    <div class="row">
+			    	<div class="col col-50">Shipment Status</div>
+			    	<div class="col col-50">
+			    		<span class="text-color">{{OrderInfo.Shipment.trx_type}}
+			    		<span ng-if="OrderInfo.Shipment.trx_type == null">N/A</span>
+			    		</span>
+			    	</div>
 			    </div>
 			</div>
 	    </a>
