--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -79,8 +79,8 @@
           Logout
         </ion-item>
 
-        <!-- <ion-item menu-close href="#/app/profile">
-          Profile - temp
+        <!-- <ion-item menu-close href="#/app/device">
+          Device
         </ion-item> -->
 
         <!--  <ion-item menu-close href="#/app/promotion">
