--- a/www/css/alignment.css
+++ b/www/css/alignment.css
@@ -26,6 +26,7 @@
 
 
 .m0{ margin: 0 0 0 0 !important; }
+.m0auto{ margin: 0 auto !important; }
 
 .m5{ margin: 5px !important; }
 .mt5{ margin-top: 5px !important; }
@@ -50,7 +51,3 @@
 .mb20{ margin-bottom: 20px !important; }
 .ml20{ margin-left: 20px !important; }
 .mr20{ margin-right: 20px !important; }
-
-
-
-.bgWhite{ background: #ffffff; }
