--- a/www/css/paul.css
+++ b/www/css/paul.css
@@ -1,27 +1,84 @@
-/*Paul*/
-/*============COMMON============*/
-a{
-	text-decoration: none;
-	color: #781702;
+/* common */
+a, p{ 
+    text-decoration: none;
+    color: #666;
 }
-.center{
+.pull-left{ float:left !important; }
+.pull-right{ float:right !important; }
+
+/* background */
+.bg-danger{ background: #e74c3c; }
+.bg-info{ background: #3498db; }
+.bg-success{ background: #2ecc71; }
+.bg-warning{ background: #f1c40f; }
+.bg-default{ background: #ecf0f1; }
+.bg-orange{ background: #e67e22; }
+.bg-white{ background: #fff; }
+
+/* text */
+.text-danger{ color: #e74c3c; }
+.text-info{ color: #3498db; }
+.text-success{ color: #2ecc71; }
+.text-warning{ color: #f1c40f; }
+.text-default{ color: #34495e; }
+.text-white{ color: #fff !important; }
+
+/* border */
+.b0{ border: 0px !important; }
+.border{ border: 1px solid #666 !important; }
+.border-top{ border-top: 1px solid #ddd; }
+.border-bottom{ border-bottom: 1px solid #ddd; }
+.border-left{ border-left: 1px solid #ddd; }
+.border-right{ border-right: 1px solid #ddd; }
+
+/* button */
+.curve-box{
+    border-radius: 5px !important;
+    /*line-height: 30px !important;*/
+    overflow: hidden;
+}
+
+/* size control */
+.width100{ width: 100% !important; }
+.width50{ width: 50% !important; }
+.widthauto{ width: auto !important; }
+.height100{ height: 100% !important; }
+.height50{ height: 50% !important; }
+.heightauto{ height: auto !important; }
+
+/* layer */
+.text-overlay{
+    position: absolute;
+    top: 144px;
+    width: 50%;
+    background: rgba(0, 0, 0, 0.65);
+    color: white;
+    padding: 5px;
+    text-align: center;
+}
+
+/* ionic original edited*/
+.bar-header{
+    background: #e74c3c !important;
+}
+
+
+
+
+/*a{
+    text-decoration: none;
+    color: #781702;
+}*/
+/*.center{
 	text-align: center;
-}
+}*/
 .default-bg{
 	background: #781702;
 	color: #fff;
 }
-.ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.pull-left{
-    float:left !important;
-}
-.pull-right{
-    float:right !important;
-}
+.bgWhite{ background: #ffffff; }
+
+
 .grey{
     color: #666 !important;
 }
@@ -35,7 +92,7 @@ a{
     bottom: 0;
     right: 0;
 }
-/*============BORDER BOX============*/
+
 .sbox{
 	border: 1px solid #666;
     background: white;
