--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,17 +1,16 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content ng-click="updateSideMenuInfo()">
     <ion-nav-bar>
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+      <ion-nav-back-button class="text-white"></ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+        <button class="button button-icon button-clear ion-navicon text-white" menu-toggle="left">
         </button>
       </ion-nav-buttons>
 
       <ion-nav-buttons side="right">
-        <a class="button" ng-href="#/app/cart/list">
-         <i class="ion-android-cart" width="25" style="font-size:20px;"></i>
+        <a class="button curve-box bg-white text-danger font20 b0" ng-href="#/app/cart/list">
+         <i class="ion-android-cart"></i>
         </a>
       </ion-nav-buttons>
 
