--- a/www/templates/product.details.html
+++ b/www/templates/product.details.html
@@ -1,81 +1,53 @@
 <ion-view view-title="Product Details">
   <ion-content ng-controller="productdetails">
-
-    <div class="container">
-        <div class="row" style="background:#F1F1F1;">
-          <div class="col col-100 center">
-            <label class="font-small">{{productDetails.name}}</label>
-          </div>
+    
+    <!-- row 1 -->
+    <div class="row p0">
+        <div class="col-50 border-right">
+          <img ng-src="{{img}}{{productDetails.photo}}" class="width100" />
+          <p class="text-overlay m0">{{productDetails.name}}</p>
         </div>
-        <div class="row mt5">
-          <div class="col col-50 sbox">
-              <img ng-src="{{img}}{{productDetails.photo}}" width="100%">      
-          </div>
-          <div class="col col-50 center">
-            <form ng-submit="cart(productDetails)">
-              <div class="col">
-                <label class="item item-input">
-                  <span class="input-label font-small royal">Price:</span> MYR {{productDetails.price}}
-                </label>
+        <div class="col-50">
+          <form ng-submit="cart(productDetails)">
+            <label class="item-input border-bottom">
+              <span class="input-label font-15 text-right text-info">Price:</span>
+              MYR {{productDetails.price}}
+            </label>
+            <label class="item-input border-bottom">
+              <span class="input-label font-15 text-right text-info">Qty:</span>
+              <input type="number" min="1" ng-model="productDetails.qty" />
+            </label>
+            <label class="item-input border-bottom">
+              <span class="input-label font-15 text-right text-info">Balance:</span>
+              {{productDetails.balance}}
+            </label>
 
-                <label class="item item-input">
-                  <span class="input-label font-small royal">Qty:</span>
-                  <input type="number" min="1" ng-model="productDetails.qty" />
-                </label>
-                <label class="item item-input">
-                  <span class="input-label font-small royal">Balance:</span>
-                  <span>{{productDetails.balance}}</span>
-                </label>
-              </div>
-              <div class="col">
-                <button type="submit" ng-show="productDetails.balance > 0" class="button button-block button-balanced font-medium">
-                  <i class="ion-android-cart font-big"></i> Add to Cart
-                </button>
-                <label class="default-bg p10" ng-show="productDetails.balance <= 0">Out of Stock</label>
-              </div>
-            </form>
-          </div>
+            <button type="submit" ng-show="productDetails.balance > 0" class="width100 bg-success b0 text-white p10" style="height: 48px;">
+              <i class="ion-android-cart font18"></i> Add to Cart
+            </button>
+            <div class="bg-danger text-white text-center p10" ng-show="productDetails.balance <= 0">Out of Stock</div>
+          </form>
         </div>
-
-        <div class="card">
-          <ul class="list"> 
-            <div class="row item font-small lightbg">
-                <div class="col">
-                 <span class="royal">SKU Code:</span> <div>{{productDetails.sku_code}}</div>
-                </div>
-                <div class="col">
-                 <span class="royal">Type:</span> <div>{{productDetails.type_name}}</div>
-                </div>
-            </div>
-            <div class="row item font-small" >
-                <div class="col">
-                  <span class="royal">Alcohol:</span> <div>{{productDetails.alcohol}}%</div>
-                </div>
-                <div class="col">
-                   <span class="royal">Size:</span> <div>{{productDetails.size}}</div>
-                </div>
-            </div>
-            <div class="row item font-small lightbg">
-                <div class="col">
-                    <span class="royal">Year:</span> <div>{{productDetails.year}}</div>
-                </div>
-                <div class="col">
-                    <span class="royal">Origin:</span> <div>{{productDetails.country_name}}</div>
-                </div>
-            </div>
-          </ul>
-        </div>
-
-        <div class="card">
-          <div class="item item-divider font-small">
-             Description:
-          </div>
-          <div class="item item-text-wrap">
-            <div ng-bind-html="productDetails.note"></div>
-          </div>
-        </div>
-  
-    </div> <!-- end of container-->
-  
+    </div>
+    
+    <!-- infomation -->
+    <h4 class="width100 bg-default m0 p10 text-center">Specification</h4>
+    <div class="row p10 border-bottom">
+      <div class="col-50"><b>SKU Code:</b> {{productDetails.sku_code}}</div>
+      <div class="col-50"><b>Type:</b> {{productDetails.type_name}}</div>
+    </div>
+    <div class="row p10 border-bottom">
+      <div class="col-50"><b>Alcohol:</b> {{productDetails.alcohol}}%</div>
+      <div class="col-50"><b>Size:</b> {{productDetails.size}}</div>
+    </div>
+    <div class="row p10">
+      <div class="col-50"><b>Year:</b> {{productDetails.year}}</div>
+      <div class="col-50"><b>Origin:</b> {{productDetails.country_name}}</div>
+    </div>
+    <h4 class="bg-default m0 p10 text-center">Description</h4>
+    <div class="row text-justify p10">
+      <div ng-bind-html="productDetails.note"></div>
+    </div>
+    
   </ion-content>
 </ion-view>
