--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,47 +1,40 @@
 <ion-view view-title="Search">
   <ion-content ng-controller="search">
 	
-	<div class="container-fluid">
-		<!-- First row for search -->
-		<div class="row">
-			<div class="col b1">
+	<!-- First row for search -->
+	<div class="row">
+		<div class="col curve-box border">
 			<!-- Search -->
-				<form ng-submit="searchform(search)">
-					<input type="text" ng-model="keyword" placeholder="Search" class="pull-left" width="100%">
-					<button type="submit" class="pull-right"><i class="icon ion-search placeholder-icon"></i></button>
-				</form>
-			</div>
+			<form ng-submit="searchform(search)">
+				<input type="text" ng-model="keyword" placeholder="Search" class="pull-left" style="width:90%">
+				<button type="submit" class="curve-box b0 bg-info pull-right text-white p10"><i class="icon ion-search"></i></button>
+			</form>
 		</div>
-		<!-- New row for listing -->
-		<div class="row">
-			<div class="col col-100">
-				<ul class="list">
-				    <!-- <li class="item" ng-repeat="productInfo in productList | filter:query"> -->
-				      	<div class="row" ng-repeat="productInfo in productList" ng-if="$index % 2 == 0">
-					    	<a class="col col-50" ng-show="productList[$index] != null" ng-if="$index < productList.length" 
-					    	ng-href="#/app/product/details/{{productList[$index].sku_code}}">
-							  	<div class="sbox center">
-								  	<img ng-src="{{img}}{{productList[$index].photo}}" width="100%">
-								  	<p class="ellipsis p10 m0">{{productList[$index].name}}</p>
-								  	<p class="default-bg p10 m0">MYR {{productList[$index].price}}</p>
-								  	<label class="grey" ng-show="productList[$index].balance <= 0">Out of Stock</label>
-							  	</div>
-						  	</a>
-						  	<a class="col col-50" ng-show="productList[$index+1] != null" ng-if="$index < productList.length" 
-						  	ng-href="#/app/product/details/{{productList[$index+1].sku_code}}">
-							  	<div class="sbox center">
-								  	<img ng-src="{{img}}{{productList[$index+1].photo}}" width="100%">
-								  	<p class="ellipsis p10 m0">{{productList[$index+1].name}}</p>
-								  	<p class="default-bg p10 m0">MYR {{productList[$index+1].price}}</p>
-								  	<label class="grey" ng-show="productList[$index+1].balance <= 0">Out of Stock</label>
-							  	</div>
-						  	</a>
-						</div>
-				    <!-- </li> -->
-		  		</ul>
-			</div>
-		</div>
-	</div> <!-- End of container-->
+	</div>
+
+	<!-- row -->
+    <div class="row" ng-repeat="productInfo in productList" ng-if="$index % 2 == 0">
+    	<!-- col-left -->
+    	<a class="col col-50" ng-show="productList[$index] != null" ng-if="$index < productList.length" 
+    	ng-href="#/app/product/details/{{productList[$index].sku_code}}">
+		  	<div class="border curve-box text-center bg-white">
+			  	<img ng-src="{{img}}{{productList[$index].photo}}" class="width100">
+			  	<p class="ellipsis p5 m0">{{productList[$index].name}}</p>
+			  	<p class="bg-info text-white m0" ng-show="productList[$index].balance > 0">MYR {{productList[$index].price}}</p>
+			  	<p class="bg-danger text-white m0" ng-show="productList[$index].balance <= 0">Out of Stock</p>
+		  	</div>
+	  	</a>
+	  	<!-- col-right -->
+	  	<a class="col col-50" ng-show="productList[$index+1] != null" ng-if="$index < productList.length" 
+	  	ng-href="#/app/product/details/{{productList[$index+1].sku_code}}">
+		  	<div class="border curve-box text-center bg-white">
+			  	<img ng-src="{{img}}{{productList[$index+1].photo}}" class="width100">
+			  	<p class="ellipsis p5 m0">{{productList[$index+1].name}}</p>
+			  	<p class="bg-info text-white m0" ng-show="productList[$index+1].balance > 0">MYR {{productList[$index+1].price}}</p>
+			  	<p class="bg-danger text-white m0" ng-show="productList[$index+1].balance <= 0">Out of Stock</p>
+		  	</div>
+	  	</a>
+	</div>
 
   </ion-content>
 </ion-view>
